# SerialVoltmeter

./: .gitignore  README.md  app.py  build.py  main.py  mainForm.ui  models.py  pyproject.toml  requirements.txt
.github/workflows/: build-executable.yml
arduino/main/: main.ino
