[project]
name = "serial-voltmeter"
requires-python = "3.10.*"

[tool.poetry]
name = "serial-voltmeter"
version = "1.0.0"
description = "Приложение для записи и визуализации данных с Arduino-вольтметра через последовательный порт"
authors = ["pas-zhukov"]
readme = "README.md"
packages = [{include = "app.py"}, {include = "build.py"}]

[tool.poetry.dependencies]
python = "3.10.*"
pyqt5-qt5 = "5.15.2"
pyqt5 = "5.15.11"
matplotlib = "3.7.1"
numpy = "1.26.4"
pandas = "2.0.2"
pyserial = "3.5"
pyqtgraph = "0.13.7"
toml = "0.10.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "5.13.1"
toml = "0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serial-voltmeter = "app:main"
